// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exec CachedQueries Only count queries 1`] = `
{
  "Q:Complex1________[["car","bus"]]": {
    "count": 7,
    "data": null,
  },
  "Q:Complex2________[5000]": {
    "count": 5,
    "data": null,
  },
  "Q:Dynamic1________["truck"]": {
    "count": 4,
    "data": null,
  },
  "Q:Dynamic2________["A"]": {
    "count": 5,
    "data": null,
  },
  "Q:Dynamic3________[{"$oid":"0000000000000000000000d2"}]": {
    "count": 0,
    "data": null,
  },
  "Q:Populated1______[]": {
    "count": 11,
    "data": null,
  },
  "Q:Populated2______[]": {
    "count": 11,
    "data": null,
  },
  "Q:Sorted1_________[]": {
    "count": 5,
    "data": null,
  },
  "Q:Static1_________[]": {
    "count": 4,
    "data": null,
  },
  "Q:Static2_________[]": {
    "count": 5,
    "data": null,
  },
  "Q:Targeted1_______[[{"$oid":"0000000000000000000000b1"},{"$oid":"0000000000000000000000b2"}]]": {
    "count": 2,
    "data": null,
  },
  "Q:Unique1_________[{"$oid":"0000000000000000000000a4"}]": {
    "count": 1,
    "data": null,
  },
}
`;

exports[`Exec CachedQueries config:{ cacheCount: 3 } exec:{ limit: 3 } 1`] = `
{
  "Q:Complex1________[["car","bus"]]": {
    "count": 7,
    "data": [
      {
        "_id": "0000000000000000000000a1",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000a2",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000a3",
        "kind": "car",
      },
    ],
  },
  "Q:Complex2________[5000]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
      {
        "_id": "0000000000000000000000b4",
        "price": 10000,
      },
      {
        "_id": "0000000000000000000000c1",
        "price": 20000,
      },
    ],
  },
  "Q:Dynamic1________["truck"]": {
    "count": 4,
    "data": [
      {
        "_id": "0000000000000000000000b1",
        "price": 2000,
      },
      {
        "_id": "0000000000000000000000b2",
        "price": 4000,
      },
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
    ],
  },
  "Q:Dynamic2________["A"]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000a1",
        "routes": [
          "A",
          "B",
        ],
      },
      {
        "_id": "0000000000000000000000a2",
        "routes": [
          "A",
          "C",
        ],
      },
      {
        "_id": "0000000000000000000000b2",
        "routes": [
          "A",
          "D",
        ],
      },
    ],
  },
  "Q:Dynamic3________[{"$oid":"0000000000000000000000d2"}]": {
    "count": 0,
    "data": [],
  },
  "Q:Populated1______[]": {
    "count": 11,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d1",
          "name": "Henry",
          "salary": 55000,
        },
      },
      {
        "_id": "0000000000000000000000a3",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d2",
          "name": "John",
          "salary": 61000,
        },
      },
    ],
  },
  "Q:Populated2______[]": {
    "count": 11,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
        "driver": {
          "_id": "0000000000000000000000d1",
          "name": "Henry",
        },
      },
      {
        "_id": "0000000000000000000000a3",
        "driver": {
          "_id": "0000000000000000000000d2",
          "name": "John",
        },
      },
    ],
  },
  "Q:Sorted1_________[]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
      },
      {
        "_id": "0000000000000000000000b4",
      },
      {
        "_id": "0000000000000000000000c1",
      },
    ],
  },
  "Q:Static1_________[]": {
    "count": 4,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
      },
      {
        "_id": "0000000000000000000000a3",
      },
    ],
  },
  "Q:Static2_________[]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
      {
        "_id": "0000000000000000000000b4",
        "price": 10000,
      },
      {
        "_id": "0000000000000000000000c1",
        "price": 20000,
      },
    ],
  },
  "Q:Targeted1_______[[{"$oid":"0000000000000000000000b1"},{"$oid":"0000000000000000000000b2"}]]": {
    "count": 2,
    "data": [
      {
        "__v": 0,
        "_id": "0000000000000000000000b1",
        "kind": "truck",
        "price": 2000,
        "routes": [],
      },
      {
        "__v": 0,
        "_id": "0000000000000000000000b2",
        "kind": "truck",
        "price": 4000,
        "routes": [
          "A",
          "D",
        ],
      },
    ],
  },
  "Q:Unique1_________[{"$oid":"0000000000000000000000a4"}]": {
    "count": null,
    "data": [
      {
        "__v": 0,
        "_id": "0000000000000000000000a4",
        "driver": "0000000000000000000000d3",
        "kind": "car",
        "price": 4000,
        "routes": [
          "B",
          "C",
        ],
      },
    ],
  },
}
`;

exports[`Exec CachedQueries config:{ cacheCount: 3 } exec:{} 1`] = `
{
  "Q:Complex1________[["car","bus"]]": {
    "count": 7,
    "data": null,
  },
  "Q:Complex2________[5000]": {
    "count": 5,
    "data": null,
  },
  "Q:Dynamic1________["truck"]": {
    "count": 4,
    "data": null,
  },
  "Q:Dynamic2________["A"]": {
    "count": 5,
    "data": null,
  },
  "Q:Dynamic3________[{"$oid":"0000000000000000000000d2"}]": {
    "count": 0,
    "data": null,
  },
  "Q:Populated1______[]": {
    "count": 11,
    "data": null,
  },
  "Q:Populated2______[]": {
    "count": 11,
    "data": null,
  },
  "Q:Sorted1_________[]": {
    "count": 5,
    "data": null,
  },
  "Q:Static1_________[]": {
    "count": 4,
    "data": null,
  },
  "Q:Static2_________[]": {
    "count": 5,
    "data": null,
  },
  "Q:Targeted1_______[[{"$oid":"0000000000000000000000b1"},{"$oid":"0000000000000000000000b2"}]]": {
    "count": 2,
    "data": null,
  },
  "Q:Unique1_________[{"$oid":"0000000000000000000000a4"}]": {
    "count": null,
    "data": [
      {
        "__v": 0,
        "_id": "0000000000000000000000a4",
        "driver": "0000000000000000000000d3",
        "kind": "car",
        "price": 4000,
        "routes": [
          "B",
          "C",
        ],
      },
    ],
  },
}
`;

exports[`Exec CachedQueries config:{} exec:{} 1`] = `
{
  "Q:Complex1________[["car","bus"]]": {
    "count": 7,
    "data": [
      {
        "_id": "0000000000000000000000a1",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000a2",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000a3",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000a4",
        "kind": "car",
      },
      {
        "_id": "0000000000000000000000c1",
        "kind": "bus",
      },
      {
        "_id": "0000000000000000000000c2",
        "kind": "bus",
      },
      {
        "_id": "0000000000000000000000c3",
        "kind": "bus",
      },
    ],
  },
  "Q:Complex2________[5000]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
      {
        "_id": "0000000000000000000000b4",
        "price": 10000,
      },
      {
        "_id": "0000000000000000000000c1",
        "price": 20000,
      },
      {
        "_id": "0000000000000000000000c2",
        "price": 40000,
      },
      {
        "_id": "0000000000000000000000c3",
        "price": 60000,
      },
    ],
  },
  "Q:Dynamic1________["truck"]": {
    "count": 4,
    "data": [
      {
        "_id": "0000000000000000000000b1",
        "price": 2000,
      },
      {
        "_id": "0000000000000000000000b2",
        "price": 4000,
      },
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
      {
        "_id": "0000000000000000000000b4",
        "price": 10000,
      },
    ],
  },
  "Q:Dynamic2________["A"]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000a1",
        "routes": [
          "A",
          "B",
        ],
      },
      {
        "_id": "0000000000000000000000a2",
        "routes": [
          "A",
          "C",
        ],
      },
      {
        "_id": "0000000000000000000000b2",
        "routes": [
          "A",
          "D",
        ],
      },
      {
        "_id": "0000000000000000000000b4",
        "routes": [
          "A",
          "B",
          "C",
        ],
      },
      {
        "_id": "0000000000000000000000c2",
        "routes": [
          "A",
        ],
      },
    ],
  },
  "Q:Dynamic3________[{"$oid":"0000000000000000000000d2"}]": {
    "count": 0,
    "data": [],
  },
  "Q:Populated1______[]": {
    "count": 11,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d1",
          "name": "Henry",
          "salary": 55000,
        },
      },
      {
        "_id": "0000000000000000000000a3",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d2",
          "name": "John",
          "salary": 61000,
        },
      },
      {
        "_id": "0000000000000000000000a4",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d3",
          "name": "Jane",
          "salary": 52000,
        },
      },
      {
        "_id": "0000000000000000000000b1",
      },
      {
        "_id": "0000000000000000000000b2",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d1",
          "name": "Henry",
          "salary": 55000,
        },
      },
      {
        "_id": "0000000000000000000000b3",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d2",
          "name": "John",
          "salary": 61000,
        },
      },
      {
        "_id": "0000000000000000000000b4",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d3",
          "name": "Jane",
          "salary": 52000,
        },
      },
      {
        "_id": "0000000000000000000000c1",
      },
      {
        "_id": "0000000000000000000000c2",
      },
      {
        "_id": "0000000000000000000000c3",
        "driver": {
          "__v": 0,
          "_id": "0000000000000000000000d4",
          "name": "Mary",
          "salary": 72000,
        },
      },
    ],
  },
  "Q:Populated2______[]": {
    "count": 11,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
        "driver": {
          "_id": "0000000000000000000000d1",
          "name": "Henry",
        },
      },
      {
        "_id": "0000000000000000000000a3",
        "driver": {
          "_id": "0000000000000000000000d2",
          "name": "John",
        },
      },
      {
        "_id": "0000000000000000000000a4",
        "driver": {
          "_id": "0000000000000000000000d3",
          "name": "Jane",
        },
      },
      {
        "_id": "0000000000000000000000b1",
      },
      {
        "_id": "0000000000000000000000b2",
        "driver": {
          "_id": "0000000000000000000000d1",
          "name": "Henry",
        },
      },
      {
        "_id": "0000000000000000000000b3",
        "driver": {
          "_id": "0000000000000000000000d2",
          "name": "John",
        },
      },
      {
        "_id": "0000000000000000000000b4",
        "driver": {
          "_id": "0000000000000000000000d3",
          "name": "Jane",
        },
      },
      {
        "_id": "0000000000000000000000c1",
      },
      {
        "_id": "0000000000000000000000c2",
      },
      {
        "_id": "0000000000000000000000c3",
        "driver": {
          "_id": "0000000000000000000000d4",
          "name": "Mary",
        },
      },
    ],
  },
  "Q:Sorted1_________[]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
      },
      {
        "_id": "0000000000000000000000b4",
      },
      {
        "_id": "0000000000000000000000c1",
      },
      {
        "_id": "0000000000000000000000c2",
      },
      {
        "_id": "0000000000000000000000c3",
      },
    ],
  },
  "Q:Static1_________[]": {
    "count": 4,
    "data": [
      {
        "_id": "0000000000000000000000a1",
      },
      {
        "_id": "0000000000000000000000a2",
      },
      {
        "_id": "0000000000000000000000a3",
      },
      {
        "_id": "0000000000000000000000a4",
      },
    ],
  },
  "Q:Static2_________[]": {
    "count": 5,
    "data": [
      {
        "_id": "0000000000000000000000b3",
        "price": 8000,
      },
      {
        "_id": "0000000000000000000000b4",
        "price": 10000,
      },
      {
        "_id": "0000000000000000000000c1",
        "price": 20000,
      },
      {
        "_id": "0000000000000000000000c2",
        "price": 40000,
      },
      {
        "_id": "0000000000000000000000c3",
        "price": 60000,
      },
    ],
  },
  "Q:Targeted1_______[[{"$oid":"0000000000000000000000b1"},{"$oid":"0000000000000000000000b2"}]]": {
    "count": 2,
    "data": [
      {
        "__v": 0,
        "_id": "0000000000000000000000b1",
        "kind": "truck",
        "price": 2000,
        "routes": [],
      },
      {
        "__v": 0,
        "_id": "0000000000000000000000b2",
        "kind": "truck",
        "price": 4000,
        "routes": [
          "A",
          "D",
        ],
      },
    ],
  },
  "Q:Unique1_________[{"$oid":"0000000000000000000000a4"}]": {
    "count": 1,
    "data": [
      {
        "__v": 0,
        "_id": "0000000000000000000000a4",
        "driver": "0000000000000000000000d3",
        "kind": "car",
        "price": 4000,
        "routes": [
          "B",
          "C",
        ],
      },
    ],
  },
}
`;
